--- a/mobile.css
+++ b/mobile.css
@@ -22,6 +22,8 @@ body {
 	margin: 0 auto;
 	width: 100%;
 	/*	overflow: hidden;*/
+	‑webkit‑text‑size‑adjust: 100%;
+	text‑size‑adjust: 100%;
 }
 
 .fullscreen {
