--- a/portfolio-mobile.css
+++ b/portfolio-mobile.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
+
 /* CSS Document */
 
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:300');
-
 @font-face {
 	font-family: "CooperHewitt-Bold";
 	src: url(fonts/CooperHewitt-Bold.woff);
@@ -18,14 +18,15 @@
 	src: url(fonts/CooperHewitt-LightItalic.woff);
 }
 
-body { 
+body {
 	width: 100%;
 	height: auto;
-/*	overflow: hidden;*/
-/*	height: 100%;*/
-	
+	/*	overflow: hidden;*/
+	/*	height: 100%;*/
 	background-color: white;
 	margin: 0 auto;
+	‑webkit‑text‑size‑adjust: 100%;
+	text‑size‑adjust: 100%;
 }
 
 .sidebar {
@@ -46,7 +47,7 @@ body {
 	opacity: 0;
 }
 
-.sidebar-overlay { 
+.sidebar-overlay {
 	display: none;
 	width: 100%;
 	height: 100%;
@@ -71,14 +72,13 @@ body {
 	top: 35%;
 }
 
-
 .content {
 	width: 80%;
 	height: auto;
 	left: 10%;
 	position: relative;
-/*	overflow: hidden;*/
-/*	padding-left: 5%;*/
+	/*	overflow: hidden;*/
+	/*	padding-left: 5%;*/
 	padding-top: 5%;
 	display: inline-block;
 	padding-bottom: 10%;
@@ -95,11 +95,11 @@ body {
 
 .content-image {
 	width: 100%;
-/*	left: 20%;*/
+	/*	left: 20%;*/
 	position: relative;
-/*	height: 40%;*/
+	/*	height: 40%;*/
 	height: auto;
-/*	background-color: #ffaeae;*/
+	/*	background-color: #ffaeae;*/
 	margin-top: 5%;
 	display: inline-block;
 }
@@ -108,13 +108,11 @@ body {
 	padding-top: 5%;
 	position: relative;
 	display: inline-block;
-/*	left: 35%;*/
+	/*	left: 35%;*/
 	width: 100%;
-	
 	font-family: "Source Code Pro";
 	font-size: 1.25em;
 	color: #7f7f7f;
-		
 }
 
 .content-text p:first-child {
@@ -147,11 +145,9 @@ body {
 	position: relative;
 	padding-top: 12%;
 	left: 60%;
-	
 	font-family: "Source Code Pro";
 	font-size: 1em;
 	color: #7f7f7f;
-	
 }
 
 .behance-text-pink {
@@ -176,21 +172,19 @@ body {
 
 .picture {
 	margin: 0 auto;
-/*
+	/*
 	left: 0;
 	right: 0;
 */
 	top: 0;
 	bottom: 0;
 	width: 100%;
-/*	position: absolute;*/
+	/*	position: absolute;*/
 }
 
 .behanceplace-2 {
 	padding-bottom: 40%;
 }
-
-
 
 .title-mobile {
 	font-family: "CooperHewitt-Bold";
@@ -230,18 +224,13 @@ a {
 	text-decoration: none;
 }
 
-
-
-
-
-#copy { 
+#copy {
 	width: 15%;
 	height: 70%;
 	position: absolute;
 	left: 42.5%;
 	top: 15%;
-	
-/*	animation: blink 1.5s infinite;*/
+	/*	animation: blink 1.5s infinite;*/
 	z-index: 25;
 }
 
@@ -262,20 +251,26 @@ a {
 }
 
 #photo p:first-child {
-/*	padding-top: 5%;*/
+	/*	padding-top: 5%;*/
 }
 
 #design {
 	position: absolute;
 	height: 100%;
 	width: 100%;
-	
 }
 
-
 @keyframes blink {
-	0% {background-color: #ffaeae;}
-	50% { background-color: #ffaeae;}
-	51% {background-color: white;}
-	100% {background-color: white;}
+	0% {
+		background-color: #ffaeae;
+	}
+	50% {
+		background-color: #ffaeae;
+	}
+	51% {
+		background-color: white;
+	}
+	100% {
+		background-color: white;
+	}
 }
