--- a/mobile.css
+++ b/mobile.css
@@ -22,8 +22,12 @@ body {
 	margin: 0 auto;
 	width: 100%;
 	/*	overflow: hidden;*/
-	‑webkit‑text‑size‑adjust: 100%;
-	text‑size‑adjust: 100%;
+	-webkit-text-size-adjust: none;
+	-moz-text-size-adjust: none;
+	-ms-text-size-adjust: none;
+	-webkit-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
 }
 
 .fullscreen {
