--- a/mobile.css
+++ b/mobile.css
@@ -54,7 +54,7 @@ body {
 	width: 100%;
 	/*	left: 5%;*/
 	font-family: "CooperHewitt-Semibold";
-	font-size: 300%;
+	font-size: 3em;
 	position: absolute;
 	color: white;
 	/*	text-align: center;*/
