--- a/portfolio-mobile.css
+++ b/portfolio-mobile.css
@@ -25,8 +25,10 @@ body {
 	/*	height: 100%;*/
 	background-color: white;
 	margin: 0 auto;
-	‑webkit‑text‑size‑adjust: 100%;
-	text‑size‑adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
+	font-size: 16px;
 }
 
 .sidebar {
