--- a/mobile.css
+++ b/mobile.css
@@ -38,8 +38,8 @@ body {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 	margin: 0 auto;
 	padding: 0 auto;
 	z-index: 10;
