--- a/mobile.css
+++ b/mobile.css
@@ -43,7 +43,7 @@ body {
 	margin: 0 auto;
 	padding: 0 auto;
 	z-index: 10;
-	/*	display: block;*/
+	display: inline-block;
 	position: absolute;
 	overflow: hidden;
 }
