--- a/portfolio.css
+++ b/portfolio.css
@@ -78,8 +78,9 @@ body {
 	/*	overflow: hidden;*/
 	padding-left: 5%;
 	padding-top: 5%;
+	padding-bottom: 15%;
 	display: inline-block;
-	padding-bottom: 10%;
+/*	padding-bottom: 10%;*/
 	length: auto;
 	float: top;
 }
@@ -88,7 +89,33 @@ body {
 	font-family: "CooperHewitt-Semibold";
 	font-size: 3em;
 	color: #ffaeae;
+	width: 95%;
 }
+
+.img {
+	width: 25%;
+	height: auto;
+/*	background-color: green;*/
+	position: absolute;
+}
+
+.txt {
+	width: 60%;
+	height: auto;
+	left: 35%;
+/*	background-color: yellow;*/
+	position: absolute;
+}
+
+.txt p {
+	font-family: "Source Code Pro";
+	font-size: 1.25em;
+	color: #7f7f7f;
+	margin-top: 1%;
+	margin-bottom: 5%;
+}
+
+
 
 .imageplace-1 {
 	width: 25%;
@@ -113,7 +140,7 @@ body {
 	/*	height: 40%;*/
 	height: auto;
 	/*	background-color: #ffaeae;*/
-	margin-top: 5%;
+/*	margin-top: 5%;*/
 	display: block;
 }
 
@@ -134,7 +161,7 @@ body {
 .behance-link {
 	width: 100%;
 	height: 20vw;
-	padding-top: 5%;
+	padding-top: 0;
 	position: relative;
 }
 
@@ -148,7 +175,7 @@ body {
 
 .behance-logo {
 	position: absolute;
-	width: 50%;
+	width: 20%;
 }
 
 .behance-text-container {
@@ -160,11 +187,11 @@ body {
 
 .behance-text {
 	position: relative;
-	padding-top: 12%;
-	left: 60%;
+	left: 25%;
 	font-family: "Source Code Pro";
 	font-size: 1em;
 	color: #7f7f7f;
+	height: 30%;
 }
 
 .behance-text-pink {
@@ -174,9 +201,9 @@ body {
 	text-decoration: none;
 	font-style: italic;
 	position: relative;
-	left: 60%;
+	left: 25%;
 	margin: 0 auto;
-	padding-top: 5%;
+	padding-top: 2.5%;
 }
 
 .picture-container {
