--- a/portfolio-mobile.css
+++ b/portfolio-mobile.css
@@ -89,11 +89,19 @@ body {
 	float: top;
 }
 
+#first {
+	padding-top: 15% !important;
+}
+
 .content-title {
 	font-family: "CooperHewitt-Semibold";
 	font-size: 2.5em;
 	color: #ffaeae;
 	width: 95%;
+}
+
+.txt:first-child {
+	padding-top: 15% !important;
 }
 
 .img {
@@ -192,13 +200,10 @@ body {
 
 .picture-container {
 	position: relative;
-	width: 60vw;
-	/*	height: 60vw;*/
+	width: 20vw;
+	height: 20vw;
 	display: inline-block;
 	padding: 5%;
-	left: 5%;
-	right: 0;
-	margin: 0 auto;
 }
 
 .picture {
@@ -208,16 +213,51 @@ body {
 	width: 100%;
 }
 
+.picture-highlighted {
+	width: 40vw;
+	height: 40vw;
+	position: absolute;
+	top: 0;
+	z-index: 1000;
+}
+
+.picture-caption {
+	position: relative;
+	padding-top: 5%;
+	text-align: center;
+	font-family: "Source Code Pro";
+	font-size: 1em;
+	color: #7f7f7f;
+	display: none;
+	width: 100%;
+}
 .behanceplace-2 {
 	padding-bottom: 40%;
 }
 
 .title-mobile {
+	transition: color, background-color;
+	transition-duration: .2s, .2s;
 	font-family: "CooperHewitt-Bold";
-	font-size: 3.5em;
+	font-size: 1.5em;
 	color: #ffaeae;
 	text-align: center;
-	padding-top: 10%;
+	position: fixed;
+	top: 0;
+	padding-top: 1%;
+	padding-bottom: .5%;
+	width: 100%;
+	left: 0;
+	right: 0;
+	z-index: 150;
+}
+
+.title-mobile-contrast {
+	transition: color, background-color;
+	transition-duration: .2s, .2s;
+	color: white !important;
+	background-color: #ffaeae !important;
+	height: auto;
 }
 
 .bottom-bar {
