--- a/portfolio.css
+++ b/portfolio.css
@@ -73,16 +73,19 @@ body {
 .content {
 	width: 60%;
 	height: auto;
-	left: 27.5%;
+	left: 25%;
 	position: relative;
 	/*	overflow: hidden;*/
 	padding-left: 5%;
 	padding-top: 5%;
-	padding-bottom: 15%;
+	margin-bottom: -5%;
 	display: inline-block;
-/*	padding-bottom: 10%;*/
 	length: auto;
 	float: top;
+}
+
+.content:last-of-type {
+	padding-bottom: 5%;
 }
 
 .content-title {
@@ -97,14 +100,21 @@ body {
 	height: auto;
 /*	background-color: green;*/
 	position: absolute;
+	display: block;
+	top: 25%;
+}
+
+.img img {
+	padding-bottom: 5vh;
 }
 
 .txt {
 	width: 60%;
 	height: auto;
-	left: 35%;
+	left: 30%;
 /*	background-color: yellow;*/
-	position: absolute;
+	position: relative;
+	margin-top: -1%;
 }
 
 .txt p {
@@ -115,26 +125,6 @@ body {
 	margin-bottom: 5%;
 }
 
-
-
-.imageplace-1 {
-	width: 25%;
-	position: absolute;
-}
-
-.imageplace-1 img {
-	padding-top: 10%;
-}
-
-.imageplace-3 {
-	width: 25%;
-	position: absolute;
-}
-
-.imageplace-3 img {
-	padding-top: 10%;
-}
-
 .content-image {
 	width: 100%;
 	/*	height: 40%;*/
@@ -142,6 +132,10 @@ body {
 	/*	background-color: #ffaeae;*/
 /*	margin-top: 5%;*/
 	display: block;
+}
+
+.stupid-thing {
+	margin-top: -100% !important;
 }
 
 .content-text {
@@ -160,9 +154,22 @@ body {
 
 .behance-link {
 	width: 100%;
-	height: 20vw;
+	height: 15vw;
 	padding-top: 0;
 	position: relative;
+}
+
+.behance-link-left {
+	height: 20vw !important;
+	margin-top: -5vh;
+}
+
+.behance-link-left .behance-text, .behance-link-left .behance-text-pink {
+	left: 50% !important;
+}
+
+.behance-link-left .behance-text-container {
+	top: 12.5%;
 }
 
 .behance {
@@ -175,11 +182,17 @@ body {
 
 .behance-logo {
 	position: absolute;
-	width: 20%;
+	width: 15%;
+}
+
+.behance-logo-left {
+	position: absolute;
+	width: 40% !important;
+	top: 5%;
 }
 
 .behance-text-container {
-	top: 10%;
+	top: 5%;
 	bottom: 0;
 	margin: 0 auto;
 	position: relative;
@@ -187,7 +200,7 @@ body {
 
 .behance-text {
 	position: relative;
-	left: 25%;
+	left: 20%;
 	font-family: "Source Code Pro";
 	font-size: 1em;
 	color: #7f7f7f;
@@ -201,7 +214,7 @@ body {
 	text-decoration: none;
 	font-style: italic;
 	position: relative;
-	left: 25%;
+	left: 20%;
 	margin: 0 auto;
 	padding-top: 2.5%;
 }
@@ -216,14 +229,9 @@ body {
 
 .picture {
 	margin: 0 auto;
-	/*
-	left: 0;
-	right: 0;
-*/
 	top: 0;
 	bottom: 0;
 	width: 100%;
-	/*	position: absolute;*/
 }
 
 .picture-highlighted {
@@ -281,10 +289,19 @@ a {
 	/*	padding-top: 5%;*/
 }
 
-#design {
+#projects {
 	position: absolute;
 	height: 100%;
 	width: 100%;
+}
+
+#pieces {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	background-image: url("pieces.png");
+	background-repeat: repeat-y;
+	background-size: contain;
 }
 
 @keyframes blink {
