--- a/portfolio.css
+++ b/portfolio.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+<img class="content-image" src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/db7f1e65410155.5af33434c4077.png"><img class="content-image" src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/db7f1e65410155.5af33434c4077.png">@charset "UTF-8";
 
 /* CSS Document */
 
@@ -79,9 +79,20 @@ body {
 	padding-left: 5%;
 	padding-top: 5%;
 	margin-bottom: -5%;
-	display: inline-block;
+	display: grid;
+	grid-template-columns: 25% 70%;
+	grid-template-rows: 10% calc(auto + 10%);
+	grid-template-areas: "top-left top-right"
+						 "left right";
+	grid-gap: 5%;
+	column-gap: 5%;
+	align-items: flex-start;
+	
 	length: auto;
 	float: top;
+	
+/*	border: 5px solid black;*/
+	padding-bottom: 2.5%;
 }
 
 .content:last-of-type {
@@ -92,16 +103,26 @@ body {
 	font-family: "CooperHewitt-Semibold";
 	font-size: 3em;
 	color: #ffaeae;
-	width: 95%;
+/*	width: 95%;*/
+	grid-column-start: top-left;
+	grid-column-end: top-right;
+	left: 0;
+	margin-left: 0;
+	float: left;
+/*	border: 5px solid red;*/
 }
 
 .img {
-	width: 25%;
+/*	width: 25%;*/
 	height: auto;
 /*	background-color: green;*/
-	position: absolute;
-	display: block;
-	top: 25%;
+/*	position: absolute;*/
+/*	display: block;*/
+	grid-area: left;
+/*	grid-row: left;*/
+	top: 0;
+/*	border: 5px solid red;*/
+	align-item: start;
 }
 
 .img img {
@@ -109,12 +130,14 @@ body {
 }
 
 .txt {
-	width: 60%;
+	width: 100%;
 	height: auto;
-	left: 30%;
+/*	left: 30%;*/
 /*	background-color: yellow;*/
 	position: relative;
 	margin-top: -1%;
+	grid-area: right;
+/*	border: 5px solid red;*/
 }
 
 .txt p {
@@ -126,12 +149,14 @@ body {
 }
 
 .content-image {
-	width: 100%;
+/*	width: 100%;*/
 	/*	height: 40%;*/
-	height: auto;
+/*	height: auto;*/
 	/*	background-color: #ffaeae;*/
 /*	margin-top: 5%;*/
-	display: block;
+/*	display: block;*/
+	grid-area: images;
+	width: 100%;
 }
 
 .stupid-thing {
@@ -143,6 +168,7 @@ body {
 	position: absolute;
 	left: 35%;
 	width: 50%;
+/*	grid-area: content;*/
 	font-family: "Source Code Pro";
 	font-size: 1.25em;
 	color: #7f7f7f;
@@ -154,14 +180,16 @@ body {
 
 .behance-link {
 	width: 100%;
-	height: 15vw;
+/*	height: 15vw;*/
 	padding-top: 0;
 	position: relative;
+	grid-area: left;
+	align-content: end;
 }
 
 .behance-link-left {
-	height: 20vw !important;
-	margin-top: -5vh;
+/*	height: 20vw !important;*/
+/*	margin-top: 1vh;*/
 }
 
 .behance-link-left .behance-text, .behance-link-left .behance-text-pink {
@@ -169,11 +197,12 @@ body {
 }
 
 .behance-link-left .behance-text-container {
-	top: 12.5%;
+	top: 25%;
 }
 
 .behance {
 	position: absolute;
+/*	top: 25%;*/
 }
 
 .behance-link a {
@@ -205,6 +234,7 @@ body {
 	font-size: 1em;
 	color: #7f7f7f;
 	height: 30%;
+	padding-top: 10%;
 }
 
 .behance-text-pink {
