--- a/portfolio.css
+++ b/portfolio.css
@@ -279,7 +279,7 @@ body {
 	position: relative;
 	width: 20vw;
 	height: 20vw;
-	display: inline-block;
+/*	display: inline-block;*/
 	padding: 5%;
 	margin-right: 10%;
 }
