--- a/mobile.css
+++ b/mobile.css
@@ -55,9 +55,9 @@ body {
 .splash-title {
 	top: 7.5%;
 	width: 100%;
-	/*	left: 5%;*/
+	left: 5%;
 	font-family: "CooperHewitt-Semibold";
-	font-size: 5em;
+	font-size: 2.5em;
 	position: absolute;
 	color: white;
 	/*	text-align: center;*/
@@ -88,7 +88,7 @@ body {
 	color: #ffaeae;
 	font-family: "CooperHewitt-Semibold";
 	/*	font-size: 5em;*/
-	font-size: 7vmin;
+	font-size: 8vmin;
 	padding-left: 12.5%;
 	padding-bottom: 1%;
 	margin: 0 auto;
@@ -106,7 +106,7 @@ body {
 	bottom: 12%;
 	position: absolute;
 	font-family: "CooperHewitt-LightItalic";
-	font-size: 1.5em;
+	font-size: 1em;
 	color: white;
 }
 
@@ -129,7 +129,7 @@ body {
 	top: 5%;
 	left: 5%;
 	font-family: "CooperHewitt-Bold";
-	font-size: 3em;
+	font-size: 2em;
 	color: #ffaeae;
 }
 
@@ -140,7 +140,7 @@ body {
 	width: 70%;
 	right: 15%;
 	position: absolute;
-	font-size: 1.05em;
+	font-size: .5em;
 	color: #7f7f7f;
 	/*	word-break: break-all;*/
 	/*	word-wrap: break-word;*/
@@ -163,7 +163,7 @@ body {
 	bottom: 40%;
 	position: absolute;
 	font-family: "CooperHewitt-LightItalic";
-	font-size: 2em;
+	font-size: .5em;
 	color: white;
 	z-index: 25;
 }
@@ -232,7 +232,7 @@ body {
 	position: absolute;
 	font-family: "CooperHewitt-Semibold";
 	text-align: center;
-	font-size: 2.5em;
+	font-size: 1.5em;
 	color: white;
 	top: 40%;
 	left: 0;
@@ -311,7 +311,7 @@ body {
 	position: absolute;
 	margin: 0 auto;
 	font-family: "CooperHewitt-Bold";
-	font-size: 3.5em;
+	font-size: 1.5em;
 	text-align: center;
 	color: #ffaeae;
 	top: 20%;
@@ -324,7 +324,7 @@ body {
 	width: 60%;
 	position: absolute;
 	left: 20%;
-	font-size: 2em;
+	font-size: .5em;
 	color: #7f7f7f;
 	word-break: break-all;
 	word-wrap: break-word;
