--- a/main.css
+++ b/main.css
@@ -110,23 +110,85 @@ body {
 .bio-header {
 	position: absolute;
 	top: 7%;
-	left: 5%;
+	left: 10%;
 	font-family: "CooperHewitt-Bold";
-	font-size: 5em;
+	font-size: 3em;
 	color: #ffaeae;
+	width: 55%;
 }
 
 .bio-body {
 	font-family: "Source Code Pro";
-	top: 22%;
-	left: 18%;
+	top: 18%;
+	left: 10%;
 	width: 55%;
+	height: 40%;
 	position: absolute;
-	font-size: 1.75em;
+	font-size: 1.5em;
 	color: #7f7f7f;
+	display: inline;
 	/*	word-break: break-all;*/
 	/*	word-wrap: break-word;*/
 	/*	hyphens: auto;*/
+	
+	display: grid;
+	grid-template-columns: 100%;
+	grid-template-rows: auto 80% auto auto;
+	grid-template-areas: "1st"
+						 "image"
+						 "3rd"
+						 "4th" ;
+	grid-row-gap: 5%;
+}
+
+.paragraph {
+	display: inline;
+	float: left;
+	width: 100%;
+	padding-top: 5%;
+	z-index: 50;
+}
+
+.bio-pictures-container {
+	width: 100%;
+	height: 75%;
+	position: absolute;
+	
+	display: grid;
+	grid-template-columns: auto auto;
+	grid-template-rows: 100%;
+	grid-template-areas: "left right";
+	grid-row-gap: 0;
+	grid-column-gap: 5%;
+	
+	align-items: flex-start;
+	float: left;
+/*	left: 0;*/
+	z-index: 50;
+	padding-top: 5%;
+}
+
+.bio-picture-left {
+	grid-column: left;
+	float: left;
+	height: 100%;
+	width: auto;
+	left: 0;
+	margin-left: 0;
+	position: relative;
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.bio-picture-right {
+	grid-column: right;
+	float: left;
+	height: 100%;
+	width: auto;
+	left: 0;
+	margin-left: 0;
+	position: relative;
+	padding-left: 0;
 }
 
 .sidebar {
