--- a/portfolio.css
+++ b/portfolio.css
@@ -183,6 +183,15 @@ body {
 /*	display: block;*/
 	grid-area: images;
 	width: 100%;
+	transition: border-right .2s;
+	border-right: 1vw solid #ffffff;
+	padding-bottom: 0 !important;
+	margin-bottom: 5vh;
+}
+
+.content-image:hover {
+	transition: border-right .6s;
+	border-right: 1vw solid #ffaeae;
 }
 
 .stupid-thing {
@@ -204,6 +213,63 @@ body {
 	margin: 0 auto;
 }
 
+.cas_website_button {
+	grid-area: left;
+	padding-top: 0;
+	width: 100%;
+	height: 10vh;
+	background-color: #ffaeae;
+	font-family: "Source Code Pro";
+	font-size: 1.25em;
+	color: #ffffff;
+	margin-bottom: 8%;
+	text-align: center;
+	vertical-align: middle;
+	transition: border-right .2s;
+	border-right: 1vw solid #ffffff;
+}
+
+.cas_website_button:hover {
+	transition: border-right .6s;
+	border-right: 1vw solid #ffaeae;
+}
+
+.cas_website_button_text {
+	height: auto;
+	margin: 0 auto;
+	top: 30%;
+	bottom: 0;
+	position: relative;
+}
+
+.cas_website {
+	width: 80%;
+	height: 80%;
+	z-index: 200;
+	position: fixed;
+	left: 10%;
+	top: 10%;
+	background-color: white;
+	border-color: #ffaeae;
+	border-width: .5vh;
+	border-style: solid;
+	
+	display: none;
+}
+
+.cas_website_backdrop {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	opacity: .6;
+	z-index: 170;
+	
+	display: none;
+}
+
 .behance-link {
 	width: 100%;
 /*	height: 15vw;*/
@@ -211,11 +277,14 @@ body {
 	position: relative;
 	grid-area: left;
 	align-content: end;
+	transition: border-right .2s;
+	border-right: 1vw solid #ffffff;
 }
 
-.behance-link-left {
+.behance-text-right {
 /*	height: 20vw !important;*/
 /*	margin-top: 1vh;*/
+	padding-top: 2.5% !important;
 }
 
 .behance-link-left .behance-text, .behance-link-left .behance-text-pink {
