--- a/main.css
+++ b/main.css
@@ -195,7 +195,7 @@ body {
 	background-color: #ffaeae;
 	width: 15%;
 	right: 0;
-	height: 100%;
+	height: 150%;
 	position: absolute;
 }
 
@@ -226,9 +226,9 @@ body {
 	background-color: inherit;
 	position: absolute;
 	width: 100%;
-	height: 25%;
-	bottom: 0;
+	height: 20vh;
 	z-index: 20;
+	top: 80vh;
 }
 
 .sidebar-hitbox:hover {
@@ -237,7 +237,7 @@ body {
 }
 
 #portfolio {
-	top: 200%;
+	top: 250%;
 	background-color: #ffaeae;
 }
 
@@ -338,7 +338,7 @@ body {
 }
 
 #contact {
-	top: 300%;
+	top: 350%;
 }
 
 .contact-header {
