--- a/main.css
+++ b/main.css
@@ -417,7 +417,7 @@ h1 {
 	grid-template-columns: 15% 70% 15%;
 	grid-template-rows: auto;
 	grid-row-gap: 5%;
-	padding-bottom: 20%;
+	margin-bottom: 20%;
 }
 
 
@@ -435,6 +435,7 @@ h1 {
 	z-index: 100;
 	
 	transform-style: preserve-3d;
+	margin-bottom: 5%;
 }
 
 .portfolioTileName {
