--- a/main.css
+++ b/main.css
@@ -23,6 +23,10 @@ body {
 	background-color: #213466; 
 }
 
+a {
+	color: inherit;
+}
+
 .left {
 	position: absolute;
 	margin: 5%;
@@ -228,7 +232,7 @@ body {
 	background-color: #ffffff;
 	display: inline-grid;
 	grid-template-columns: 60% 40%;
-	grid-template-rows: 40vh 50vh 60vh 50vh 50vh;
+	grid-template-rows: 40vh 40vh 40vh 60vh 40vh;
 	grid-row-gap: 5vh;
 }
 
@@ -354,7 +358,7 @@ h1 {
 	width: 80%;
 	grid-column: 1 / 3;
 /*	grid-column-end: 2;*/
-	grid-row: 2;
+	grid-row: 2 / 3;
 /*	grid-row-end: 3;*/
 	margin: 0 10%;
 }
@@ -365,7 +369,7 @@ h1 {
 
 .portfolioSiema {
 	grid-column: 1 / 3;
-	grid-row: 3;
+	grid-row: 4 / 5;
 	position: absolute;
 	display: grid;
 	overflow: hidden;
@@ -384,7 +388,7 @@ h1 {
 	width: 80%;
 	grid-column: 1 / 3;
 /*	grid-column-end: 2;*/
-	grid-row: 4;
+	grid-row: 3 / 4;
 /*	grid-row-end: 3;*/
 	margin: 0 10%;
 }
