--- a/main.css
+++ b/main.css
@@ -219,14 +219,12 @@ a {
 	stroke-width: 1;
 }
 
-.portfolioContainer {
+/*.portfolioContainer {
 	position: absolute;
 	width: 100%;
-/*	padding: 10% 5%;*/
 	margin: auto;
 	left: 0;
 	right: 0;
-/*	top: 10%;*/
 	height: auto;
 	z-index: 300;
 	background-color: #ffffff;
@@ -234,7 +232,7 @@ a {
 	grid-template-columns: 60% 40%;
 	grid-template-rows: 40vh 40vh 40vh 60vh 40vh;
 	grid-row-gap: 5vh;
-}
+}*/
 
 .headerImage {
 /*	background-color: green;*/
@@ -414,6 +412,21 @@ h1 {
 
 .portfolioResults p {
 	color: #213466;
+}
+
+.portfolioLargeText {
+	font-weight: 400;
+	font-family: "freight-micro-pro", serif;
+	font-size: 2em;
+	display: grid;
+	position: absolute;
+	height: 90%;
+	width: 70%;
+	grid-column: 1 / 3;
+	margin: 0 10%;
+	padding: 5vh 5vw;
+	background-color: #213466;
+	color: #ffffff;
 }
 
 #unicef {
